--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+/* font family */
+body{
+    font-family: Arial, Helvetica, sans-serif;
+}
 /* nav bar and header */
 nav{
     display: flex;
@@ -24,3 +28,32 @@ nav section input{
     height: 50px;
     width: auto;
 }
+
+/* Page layout */
+.thumbs{
+    height: 25px;
+    width: auto;
+}
+.avatar{
+    height: 75px;
+    width: auto;
+}
+
+#page_layout{
+    padding: 2%;
+    display: flex;
+    flex-flow: wrap;
+}
+
+/* Main video Section */
+
+#video{
+    flex-grow: 1;
+    width: 1500px;
+}
+/* LETS LOOK AT THIS TODAY
+#video iframe{
+    width: 100%;
+    height: 60%;
+}
+*/
