--- a/stylebck.css
+++ b/stylebck.css
@@ -1,17 +1,53 @@
+/* font family */
+body{
+    font-family: Arial, Helvetica, sans-serif;
+}
 /* nav bar and header */
 nav{
     display: flex;
     flex-flow: row;
     align-items: center;
     justify-content: space-between;
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-left: 5%;
+    margin-right: 5%;
+    
 }
-nav section input{
+nav section{
     flex-grow: 1;
-    max-width: 40%;
+    }
+
+nav section input{
+    width: 50%;
+    height: 30px;
+    } 
+.buttons{
+    height: 30px;
 }
+
 #logo{
     height: 50px;
     width: auto;
 }
+
+/* Main video Section */
+/*
+#video{
+    display: flex;
+    flex-flow: column;
+    padding-left: 10%;
+    width: 55%;
+}
+#video img{
+    width: 25px;
+    height: auto;
+}
+#video_name{
+    font-weight: bold;
+}
+#video section{
+    display: flex;
+    flex-flow: row;
+    justify-content: space-between;
+}
+
+*/
